src/view/browser/render/snapshots/nifi_lens__view__browser__render__processor__snapshots__processor_detail_properties_focused.snap
---
source: src/view/browser/render/processor.rs
expression: out
---
"┌ PutKafka · processor · RUNNING ──────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││type   org.apache.nifi.processors.kafka.pubsub.PublishKafka_2_6                                                     ││"
"││bundle org.apache.nifi:nifi-kafka-2-6-nar:2.8.0                                                                     ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┏ Properties ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 8 ┓│"
"│┃KEY                            VALUE                                                                                ┃│"
"│┃Property-0                     value-0                                                                              ┃│"
"│┃Property-1                     value-1                                                                              ┃│"
"│┃Property-2                     value-2                                                                              ┃│"
"│┃Property-3                     value-3                                                                              ┃│"
"│┃Property-4                     value-4                                                                              ┃│"
"│┃Property-5                     value-5                                                                              ┃│"
"│┃Property-6                     value-6                                                                              ┃│"
"│┃Property-7                     value-7                                                                              ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────────────────────────── 4 ┐│"
"││10:14:10 ERROR  message 0 with details                                                                              ││"
"││10:14:11 WARN   message 1 with details                                                                              ││"
"││10:14:12 INFO   message 2 with details                                                                              ││"
"││10:14:13 WARN   message 3 with details                                                                              ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│↑/↓ row · l next section · h back · c copy value · e full list                                                        │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
