src/view/browser/render/snapshots/nifi_lens__view__browser__render__processor__snapshots__processor_detail_properties_value_with_resolvable_uuid_shows_arrow.snap
---
source: src/view/browser/render/processor.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ PutKafka · processor · RUNNING ──────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││type   org.apache.nifi.processors.kafka.pubsub.PublishKafka_2_6                                                     ││"
"││bundle org.apache.nifi:nifi-kafka-2-6-nar:2.8.0                                                                     ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┏ Properties ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2 ┓│"
"│┃KEY                            VALUE                                                                                ┃│"
"│┃Record Reader                  fixture-json-reader (a1b2c3d4…) →                                                    ┃│"
"│┃Topic Name                     events.in                                                                            ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┃                                                                                                                    ┃│"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
