src/view/browser/render/snapshots/nifi_lens__view__browser__render__processor__snapshots__processor_detail_properties_value_without_resolution_shows_raw_uuid.snap
---
source: src/view/browser/render/processor.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ PutKafka · processor · RUNNING ──────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││type   org.apache.nifi.processors.kafka.pubsub.PublishKafka_2_6                                                     ││"
"││bundle org.apache.nifi:nifi-kafka-2-6-nar:2.8.0                                                                     ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Properties ───────────────────────────────────────────────────────────────────────────────────────────────────── 2 ┐│"
"││KEY                            VALUE                                                                                ││"
"││Record Reader                  a1b2c3d4-e5f6-7890-abcd-ef1234567890                                                 ││"
"││Topic Name                     events.in                                                                            ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
