src/view/browser/render/snapshots/nifi_lens__view__browser__render__processor__snapshots__processor_detail_sparkline_narrow_suppressed.snap
---
source: src/view/browser/render/processor.rs
expression: out
---
"┌ PutKafka · processor · ┐"
"│┌ Identity ────────────┐│"
"││type   org.apache.nif…││"
"││bundle org.apache.nif…││"
"││                      ││"
"│└──────────────────────┘│"
"│┌ Properties ─────── 8 ┐│"
"││KEY                   ││"
"││Property-0            ││"
"││Property-1            ││"
"││Property-2            ││"
"││Property-3            ││"
"││Property-4            ││"
"││Property-5            ││"
"││Property-6            ││"
"││Property-7            ││"
"│└──────────────────────┘│"
"│┌ Connections ────── 0 ┐│"
"││DIR   QUEUED          ││"
"││                      ││"
"││                      ││"
"││                      ││"
"│└──────────────────────┘│"
"│┌ Recent bulletins ─ 4 ┐│"
"││10:14:10 ERROR  messag││"
"││10:14:11 WARN   messag││"
"││10:14:12 INFO   messag││"
"││10:14:13 WARN   messag││"
"│└──────────────────────┘│"
"└────────────────────────┘"
