src/view/browser/render/snapshots/nifi_lens__view__browser__render__processor__snapshots__processor_detail_with_many_properties.snap
---
source: src/view/browser/render/processor.rs
expression: "format!(\"{}\", terminal.backend())"
---
"Processor — PutKafka                                                                                "
"Type:   org.apache.nifi.processors.kafka.pubsub.PublishKafka_2_6                                    "
"Bundle: org.apache.nifi:nifi-kafka-2-6-nar:2.8.0                                                    "
"State: RUNNING   Concurrent: 2                                                                      "
"Schedule: TIMER_DRIVEN every 1 sec                                                                  "
"Run duration: 25 ms    Penalty: 30 sec    Yield: 1 sec                                              "
"                                                                                                    "
"Properties (showing 10 of 13)                                                                       "
"  Property-0                   value-0                                                              "
"  Property-1                   value-1                                                              "
"  Property-2                   value-2                                                              "
"  Property-3                   value-3                                                              "
"  Property-4                   value-4                                                              "
"  Property-5                   value-5                                                              "
"  Property-6                   value-6                                                              "
"  Property-7                   value-7                                                              "
"  Property-8                   value-8                                                              "
"  Property-9                   value-9                                                              "
"  …3 more, press e to expand                                                                        "
"Validation errors: 1                                                                                "
"  'Kafka Key' invalid                                                                               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
